@@ -66,3 +66,9 @@ Fernando Arnaboldi (IOActive)
     - Found several conditions in which the server did not properly throw out
       maliciously constructed variables in the access.conf file.  This has been
       fixed along with new fuzzing tests in the test suite.
+
+Vlad Glagolev
+    - Submitted a patch to fix ndbm/gdbm usage when --disable-file-cache is
+      used for the autoconf configure script.  This functionality was broken in
+      be4193d734850fe60f14a26b547525ea0b9ce1e9 through improper handling of
+      #define macros from --disable-file-cache.
